--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,24 @@
 #release configuration
-#Sun Dec 15 13:05:49 CET 2019
+#Sun Dec 15 13:13:45 CET 2019
 projectVersionPolicyId=default
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
+project.rel.sfg.petclinic\:pet-clinic-data=0.0.1
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
-pushChanges=true
-completedPhase=check-poms
+dependency.org.springframework\:spring-test.development=5.2.0.BUILD
+project.scm.sfg.petclinic\:pet-clinic-sfg-edition.tag=HEAD
+project.rel.sfg.petclinic\:pet-clinic-sfg-edition=0.0.1
+project.scm.sfg.petclinic\:pet-clinic-sfg-edition.developerConnection=scm\:git\:https\://github.com/adiforka/pet-clinic-sfg-edition.git
+completedPhase=generate-release-poms
 scm.url=scm\:git\:https\://github.com/adiforka/pet-clinic-sfg-edition.git
+project.scm.sfg.petclinic\:pet-clinic-data.empty=true
+project.dev.sfg.petclinic\:pet-clinic-data=0.0.2-SNAPSHOT
+project.dev.sfg.petclinic\:pet-clinic-web=0.0.2-SNAPSHOT
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+pushChanges=true
+project.dev.sfg.petclinic\:pet-clinic-sfg-edition=0.0.2-SNAPSHOT
+scm.tag=pet-clinic-sfg-edition-0.0.1
+project.rel.sfg.petclinic\:pet-clinic-web=0.0.1
+dependency.org.springframework\:spring-test.release=5.2.0.BUILD
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
+project.scm.sfg.petclinic\:pet-clinic-web.empty=true
