--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>pet-clinic-sfg-edition</artifactId>
         <groupId>sfg.petclinic</groupId>
-        <version>0.0.1</version>
+        <version>0.0.2-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -14,7 +14,7 @@
         <dependency>
             <artifactId>pet-clinic-data</artifactId>
             <groupId>sfg.petclinic</groupId>
-            <version>0.0.1</version>
+            <version>0.0.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -37,14 +37,14 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>5.2.0.BUILD-SNAPSHOT</version>
+            <version>5.2.0.BUILD</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>5.2.0.RELEASE</version>
+            <version>5.2.0.BUILD</version>
             <scope>test</scope>
         </dependency>
 
