Adding static resources (from original Spring-Petclinic project). Closes #25

--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.banner.image.location=gibson.jpg
+spring.banner.image.location=kissclipart-cat-logo-clipart-kitten-felidae-siberian-cat-ddaa205823eaf0ca.jpg
