--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-
+spring.profiles.active=SDJpa
 #Internationalization (this below tells Spring where to look for the internationalization files)
 spring.messages.basename=messages/messages
